--- a/inst/rmarkdown/templates/pepr-roa/skeleton/skeleton.Rmd
+++ b/inst/rmarkdown/templates/pepr-roa/skeleton/skeleton.Rmd
@@ -11,19 +11,7 @@ output:
 bibliography: micro_rm_references.bib
 ---
 ```{r, echo = FALSE, message = FALSE}
-# When using this template change for RM specific information
-rm_number <- "RM8375"
-rm_strain <- "Salmonella enterica subspecies enterica serovar Typhimurim strain LT2"
-rm_genus <- "Salmonella"
-rm_concentration <- 50
-rm_volume <- 60
-rm_mass <- round(rm_concentration*rm_volume/1000,0)
-rm_vial_number <- 1500
-strain_source <- "the Food and Drug Administration's Center for Food Safety, who originally received from The Institute for Genomic Research."
-rm_genome_size <- 4.8*10^6
-
-# Database location
-db_path <- "~/Desktop/micro_rm/pepr-data/MG001/peprDB.sqlite"
+source("rm_metadata.R")
 ```
 
 ```{r, echo = FALSE, message=FALSE}
@@ -51,9 +39,9 @@ __SPECIFIC TO RM__ strain specific information
 
 Loftstrand Labs[^lofstrand] Limited grew a large batch of `r rm_strain` provided by `r strain_source`  to produce ~ `r (rm_vial_number * 3)/1000` mg of total extracted DNA, divided equally into `r rm_vial_number` vials (Appendix: [Section A][], [Section B][]). Each unit of `r rm_number` is approximately `r rm_mass` ug of extracted genomic DNA in Tris buffer.  The material is stored in 0.5 ml screw cap microcentrifuge tubes (Item number 1405-9710 USA Scientific [^usa]).
 
-__SPECIFIC TO RM__ acquisition and handeling description
-- culture conditions 
-- DNA extraction methods
+```{r echo = FALSE,child='rm_specific_culture_ext.Rmd' }
+## Add text specific to rm regarding culturing conditions and DNA extraction.
+```
  
 This RM is isolated DNA rather than live cells because cells can mutate with each cell division, and the genome sequence may not be stable over time for live cells. Extracting DNA from a large batch of cells helps ensure that all vials contain essentially the same DNA sequences. Even though the DNA in the cells is likely to mutate at low frequency during the growth, the resulting mutations will be in extremely small proportions of the overall cells unless they confer a selective advantage and occur early in the culture process. Even if any mutations confer a selective advantage, the DNA from the large batch of cells was mixed before aliquoting to minimize the variability in the proportions of mutations among vials. 
  
@@ -63,7 +51,7 @@ The intended use of `r rm_number` is to help assess performance of high-throughp
 1. DNA sequencing and data analysis method validation and quality control as part of a laboratory quality control program;     
 2. microbial genome sequencing for DNA sequencing including genome assembly, read mapping based variant calling methods.   
 
-The genomic DNA is intended to be analyzed in the same way as any other sample a laboratory would analyze extracted DNA, such as through the use of a genome assembly or variant calling bioinformatic pipeline (Figure Measurement Process Diagram).  Because the RM is extracted DNA, it does not assess pre-analytical steps such as DNA extraction. It does however, challenge sequencing library preparation, sequencing machines, base calling algorithms, and the subsequent bioinformatic analysis.  This RM is not intended to assess bioinformatics steps such as strain identificaiton, phylogenetic analysis, or genome annotation. It is important to recognize the genome sequence is “Reference Value” rather than “Certified Value” because we were not yet fully confident that we accounted for all known biases.  However, we evaluated the individual base calls and genome assembly for a number of known sources of bias, e.g. repeat regions, and included additional information regarding these sources of bias (see vcf and gff files). 
+The genomic DNA is intended to be analyzed in the same way as any other sample a laboratory would analyze extracted DNA, such as through the use of a genome assembly or variant calling bioinformatic pipeline (Fig. 1).  Because the RM is extracted DNA, it does not assess pre-analytical steps such as DNA extraction. It does however, challenge sequencing library preparation, sequencing machines, base calling algorithms, and the subsequent bioinformatic analysis.  This RM is not intended to assess bioinformatics steps such as strain identificaiton, phylogenetic analysis, or genome annotation. It is important to recognize the genome sequence is “Reference Value” rather than “Certified Value” because we were not yet fully confident that we accounted for all known biases.  However, we evaluated the individual base calls and genome assembly for a number of known sources of bias, e.g. repeat regions, and included additional information regarding these sources of bias (see vcf and gff files). 
 
 ```{r echo = FALSE, fig.width = 6, fig.align='center', fig.cap= "Generic measurement process for genome assembly and variant calling intended use cases.  For sequencing quality control the results from the sequencing step would be compared to the reference material genome sequence to determine base level sequencing accuracy."}
 grid.raster(readPNG("measurement_process.png"))
@@ -73,9 +61,9 @@ grid.raster(readPNG("measurement_process.png"))
 ## Genome Sequence as a reference value
 Characterizing a microbial genome RM at each of the $`r rm_genome_size/1000000`\times 10^6$ positions poses a significant metrological challenge. The consensus base call at each genomic position is a “nominal property”, because it is not a numerical value.  A previous sequence-based SRM 2374 was certified primarily based on capillary (or “Sanger”) sequencing, a relatively mature sequencing technology that is not easily scalable to whole genomes.  The maturity of capillary sequencing as well as the small size of SRM 2374 (< 100,000 bases) allowed for manual curation of capillary sequencing traces across the entire DNA sequences, and the assignment of qualitative (non-probabilistic) statements about the uncertainty of each base call.
 
-To characterize `r rm_number`, we relied primarily on a variety of less mature “Next Generation Sequencing” (NGS) technologies. Unlike capillary sequencing, NGS technologies can sequence a whole genome at a reasonable cost.  NGS technologies measure many reads at each position, from which variant callers and consensus base callers calculate probabilistic estimates of uncertainty based on Bayesian statistics and assuming binomial sampling.  Unfortunately, these probabilistic estimates of uncertainty are rarely accurate due to various sources of bias and error in the sequencing and bioinformatics (Fig Cause-Effect Diagram).  Therefore, to develop a characterized reference genome sequence we first generated an assembly of the whole genome then performed a base level analysis of the genome assembly.  
+To characterize `r rm_number`, we relied primarily on a variety of less mature “Next Generation Sequencing” (NGS) technologies. Unlike capillary sequencing, NGS technologies can sequence a whole genome at a reasonable cost.  NGS technologies measure many reads at each position, from which variant callers and consensus base callers calculate probabilistic estimates of uncertainty based on Bayesian statistics and assuming binomial sampling.  Unfortunately, these probabilistic estimates of uncertainty are rarely accurate due to various sources of bias and error in the sequencing and bioinformatics (Fig. 1).  Therefore, to develop a characterized reference genome sequence we first generated an assembly of the whole genome then performed a base level analysis of the genome assembly.  
 
-The sources of bias and error associated with different steps in the sequence measurement process are indicated in the cause-effect diagram below (Fig XYZ). Please see Olson (et al. _in prep_) for a detailed discussion of these sources of error.
+The sources of bias and error associated with different steps in the sequence measurement process are indicated in the cause-effect diagram below (Fig. 2). Please see Olson (et al. _in prep_) for a detailed discussion of these sources of error.
 
 ```{r echo = FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Cause and effect diagram indicating the sources of bias and error for the individual components of the sequence measurement process."}
 grid.raster(readPNG("MicroRMCauseEffect.png"))
@@ -88,16 +76,15 @@ Genomic purity, genome annotation, homopolymer length, and identification of rep
 # Characterization Process
 ## Sequence Characterization
 ### Sequencing Measurements
-The reference materials were sequenced using the Illumina[^illumina] MiSeq and Ion Torrent[^iontorrent] PGM at NIST.  Eight vials from the `r rm_number` lot were randomly selected. 
 
-__%%TODO%%__ Sequencing methods
-- library preparation and sequencing protocols    
-- non-NIST measurements    
-    * OpGen  
-    * PacBio  
+```{r echo = FALSE,child='rm_specific_nist_sequencing.Rmd' }
+## Add text specific to rm regarding sequencing measurements made at NIST.
+```
+    
+Eight vials from the `r rm_number` lot were randomly selected. In addition to NIST measurements, the material was sequenced using the Pacific Biosciences [^pacbio] RSII, and optical mapping was by OpGen through their MapIt service.  
 
 ### Sequence Analysis Methods
-For the genome assembly we started with a _de novo_ genome assembly and validated the assembly using optical mapping and sequencing data generated using orthogonal measurement methods. Long read sequence data generated with the Pacific Biosciences [^pacbio] RSII generate sequence reads with a median length of around 8kb, which is long enough to spand the ribosomal operon repeat regions, often resulting in a complete genome assembly [@Koren2013]. While the long reads allow for the assembly of a complete genome the relatively high base call error rate ~20% for individual reads can lead to misassemblies. 
+For the genome assembly we started with a _de novo_ genome assembly and validated the assembly using optical mapping and sequencing data generated using orthogonal measurement methods. Long read sequence data generated with the Pacific Biosciences [^pacbio] RSII generate sequence reads with a median length of around 8kb, which is long enough to spand the ribosomal operon repeat regions, often resulting in a complete genome assembly [@Koren2013]. While the long reads allow for the assembly of a complete genome the relatively high base call error rate ~20\% for individual reads can lead to misassemblies. 
 
 To validate the assembly othogonal methods optical mapping and short read seqeuncing were used.  Optical mapping provides information regarding the overall structure of the genome based on the location of restriction sites within long fragments (average size > 200Mb).  Comparison of the fragment patterns between the optical mapping data and _in-silico_ generated fragment patterns from the genome assembly indicates potential misassemblies in the genome assembly [@Mendelowitz2014]. The Optical mapping data was generated by a commercial vendor OpGen[^opgen] and sources of bias and error have not been fully investigated. The due to the resolution limit of the optical mapping method it is unable to detect missassemblies smaller than 3 kb.  
 
@@ -105,16 +92,19 @@ Potential misassemblies smaller than 3 kb were identified using short read data 
 
 Disagreements between the genome assembly and the optical mapping or short read results were investigated for sources of bias to account for the discrepancy. When appropriate the genome assembly was corrected.  If we were unable to identify the source of the bias that caused the misassembly the genome sequence is annotated appropriately to indicate region where the assembly is ambiguous. It is important to note that agreement between orthogonal methods does not guarantee a correct result as they may all be suseptible to the same source(s) of bias, therefore we intend to update the genome assembly as new data is collected and errors in the assembly are revealed.
     
-Base level analysis was performed by evaluating the proportion of sequencing reads with bases supporting the genome assembly base call at individual genome positions, within the the lot (base purity) and among individual vials (base homogeneity). Short read sequencing data generated using the MiSeq and PGM were used for base level analysis. Base purity was defined for the two platform individually, using samtools mpileup __%%TODO%% REF__. Base homogeneity, was assessed using varscan somatic variant caller __%%TODO%% REF__, using the methods described in RM8398 report of analysis __%%TODO%% REF__. Additional genome annotation information was obtained to provide context for base level sequence analysis include gene annotation, identification of repeat regions, and homopolymer length. Genome annotation was performed using the RAST server[^rast]. Repeat regions were identified using mumer __%%TODO%% REF__.  
+Base level analysis was performed by evaluating the proportion of sequencing reads with bases supporting the genome assembly base call at individual genome positions, within the the lot (base purity) and among individual vials (base homogeneity). Short read sequencing data generated using the MiSeq and PGM were used for base level analysis. Base purity was defined for the two platform individually, using samtools mpileup [@Li2009]. Base homogeneity, was assessed using varscan somatic variant caller [@Koboldt2009], using the methods described in RM8398 report of analysis. Additional genome annotation information was obtained to provide context for base level sequence analysis include gene annotation, identification of repeat regions, and homopolymer length. Genome annotation was performed using the RAST server[^rast]. Repeat regions were identified using mumer [@Delcher2002].  
 
-The purity of the reference material in terms of presense of DNA from sources other than `r rm_strain` was assessed using the metagenomic taxonomic read classification algorithm PathoScope __%%TODO%% REF__.  This method uses an expectation maximization algorithm where the sequence data are first mapped to a database comprised on all sequence data in the Genbank nt database __%%TODO%% REF__, then through an iterative process re-assigns ambiguously mapped reads to based on the proportion of reads mapped unambigously to individual taxa in the database. 
+The purity of the reference material in terms of presense of DNA from sources other than `r rm_strain` was assessed using the metagenomic taxonomic read classification algorithm PathoScope [@Hong2014].  This method uses an expectation maximization algorithm where the sequence data are first mapped to a database comprised on all sequence data in the Genbank nt database, then through an iterative process re-assigns ambiguously mapped reads to based on the proportion of reads mapped unambigously to individual taxa in the database. 
 
 #### Method Reproducibility
-The methods used to characterize the reference material were developed in a manner to facilitate reuse and ensure computational reproduciblity, obtaining the same results when starting with the same set of measurement data.  To achive this goal the data, computer code, as well as the computing environment were all made publically available.  The raw sequence data is archived at the Genbank Sequence Read Archive ([ncbi.nlm.nih.gov/sra](http://www.ncbi.nlm.nih.gov/sra)), see table __%%TODO%% REF__ in the summary of sequencing data results section for accession numbers.  The code used to characterize the material is available through GitHub as a python bioinformatic program ([github python repo](http://www.github/nate-d-olson/tobenamedpython)) and an R package ([github Rrepo](http://www.github/nate-d-olson/tobenamedR)).  The python bioinformatics pipeline performs the initial sequence analysis and uses a Docker environment for dependencies [docker.org](http://www.docker.com). A flowchat of the bioinformatic pipeline used to characterize the RM can be found in Appendix [Section D][]. The R package, includes functions for loading the output from the bioinformatics pipeline into an sqlite database and generating the summary figures and tables found within this report of analysis.  
+The methods used to characterize the reference material were developed in a manner to facilitate reuse and ensure computational reproduciblity, obtaining the same results when starting with the same set of measurement data.  To achive this goal the data, computer code, as well as the computing environment were all made publically available.  The raw sequence data is archived at the Genbank Sequence Read Archive ([ncbi.nlm.nih.gov/sra](http://www.ncbi.nlm.nih.gov/sra)), see table 1 in the summary of sequencing data results section for accession numbers.  The code used to characterize the material is available through GitHub as a python bioinformatic program ([github pepr](http://www.github/nate-d-olson/pepr)) and an R package ([github peprr](http://www.github/nate-d-olson/peprr)).  The python bioinformatics pipeline performs the initial sequence analysis and uses a Docker environment for dependencies [docker.org](http://www.docker.com). A flowchat of the bioinformatic pipeline used to characterize the RM can be found in Appendix [Section D][]. The R package, includes functions for loading the output from the bioinformatics pipeline into an sqlite database and generating the summary figures and tables found within this report of analysis.  
 
 ### Sequence Analysis Results
 #### Summary of Sequencing Datasets
-__SPECIFIC TO RM__ Description of datasets
+```{r echo = FALSE,child='rm_specific_dataset_summary.Rmd' }
+## Add text specific to rm regarding general summary of sequencing datasets.
+```
+
 __%%TODO%%__ 
 - add coverage to table
 - add pacbio to table
@@ -124,25 +114,26 @@ kable(seq_summary_table(peprDB),
 ```
 
 #### Genome Assembly
-__SPECIFIC TO RM__ Description of genome assembly
-__%%TODO%%__ _de-novo_ Assembly characteristics
+```{r echo = FALSE,child='rm_specific_assembly_summary.Rmd' }
+## Add text specific to rm regarding general summary of genome assembly
+```
 
-__SPECIFIC TO RM__ Describe optical mapping results
+```{r echo = FALSE,child='rm_specific_optical_map_summary.Rmd' }
+## Add text specific to rm regarding general summary of optical mapping results
+```
 
 ```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Assembly of optical mapping data."}
 grid.raster(readPNG("opgen_assembly.png"))
 ```
 
-__SPECIFIC TO RM__ Descibe validation results
+```{r echo = FALSE,child='rm_specific_assembly_validation_summary.Rmd' }
+## Add text specific to rm regarding general summary of assembly validation results.
+```
 
 ```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap= "Comparison of optical map data to genome assembly."}
 # __SPECIFIC TO RM__
 grid.raster(readPNG("opgen_assembly_comparison.png"))
 ```
-
-__SPECIFIC TO RM__ Additional Results from evaluation if necessary
-
-__SPECIFIC TO RM__ Describe short read validation results 
 
 ```{r echo =FALSE, message=FALSE, warning=FALSE}
 kable(pilon_changes_table(peprDB), 
@@ -150,25 +141,32 @@ kable(pilon_changes_table(peprDB),
       caption = "Changes made to reference genome with Pilon")
 ```
 
-
-__SPECIFIC TO RM__ Discussion and analysis of questiontionable regions
-
 #### Base Level Analysis
 ##### Base Purity
-__SPECIFIC TO RM__ description of results
-__%%TODO%%__ purity plots
+```{r echo = FALSE,child='rm_specific_base_level_purity_summary.Rmd' }
+## Add text specific to rm regarding general summary of base level purity.
+```
 
-__%%TODO%%__ Analysis of low purity positions 
-__%%TODO%%__ figures correlating different parameters with low purity positions  
-- coverage plots
--  known sources of bias
+```{r echo = FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Comparison of base purity values for PGM and MiSeq."}
+purity_scatter_plot(peprDB)
+```
 
-__%%TODO%%__ table of low purity positions 
+```{r echo =FALSE, message=FALSE, warning=FALSE}
+kable(low_purity_table(peprDB), 
+      row.names = FALSE,
+      caption = "Positions with base level purity values less than 98% for both platforms.")
+```
+
+```{r echo = FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Bias metrics for low purity positions."}
+low_pur_metrics_figure(db_con)
+```
 
 __%%TODO%%__ indel analysis
 
 ##### Sequence homogeneity
-__SPECIFIC TO RM__ description of results
+```{r echo = FALSE,child='rm_specific_base_level_homogeneity_summary.Rmd' }
+## Add text specific to rm regarding general summary of base level homogeneity.
+```
 
 ```{r echo =FALSE}
 kable(homogeneity_sig_table(peprDB, rename_cols = TRUE), 
@@ -185,19 +183,22 @@ homogeneity_freq_figure(peprDB)
 ```
 
 ##### Genome Annotation
-__SPECIFIC TO RM__ Overview - highlight interesting findings, if necessary, RM specific
+```{r echo = FALSE,child='rm_specific_genome_annotation_summary.Rmd' }
+## Add text specific to rm regarding general summary of genome annotation.
+```
 
 #### Genomic Purity
-__SPECIFIC TO RM__ Description of purity results
+```{r echo = FALSE,child='rm_specific_genomic_purity_summary.Rmd' }
+## Add text specific to rm regarding genomic purity.
+```
 ```{r echo = FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Proportion of reads from contaminant DNA."}
 contam_counts_figure(peprDB, rm_genus)
 ```
 
-```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.show = 'asis', fig.cap= "Read count frequency for contamiants."}
-contam_distribution_figure(peprDB, rm_genus)
+```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.height = 6, fig.cap= "Breakdown of contaminants by organism.",fig.retina=TRUE}
+contam_heatmap_figure (peprDB, rm_genus)
 ```
 
-__%%TODO%%__ Table of Contaminants - potentially supplemental, with comparison of contaminants by platform and other variables
 
 ## DNA Fragment Size Characterization
 ### DNA Fragment Size Stability and Homogeneity
@@ -220,31 +221,39 @@ For handling conditions, triplicate vials were subjected to pipetting, vortexing
 All temperature-based conditions were monitored with a data logger to track temperature, humidity and dew point over the entirety of the time-course.  All samples were stored in opaque boxes to minimize exposure the light.  At the conclusion of the time-course samples were placed in a -20°C freezer until measurements were made.
 
 ### Analysis of Homogeneity and Stability Study
+To assess the homogeneity and stability of the DNA fragment size distribtion the proportion of DNA in a PFGE gel lane for each sample was determined for regions between ladder markers. These proportions were then compared using an ANOVA and a Tukey's HSD test was used to identify pairwise statistical differences. The gels were processed in a semi-automated manner were the parameters using the identify and label markers were manually set then used to process the gels in an automated manner. Prior to processing the gels were first manually cropped to remove regions of the gel to the left and right of the outer lanes and the gel wells used to load the gels. The gel wells were removed to eliminate potential biases due to presence of residual DNA in the wells. Finally the images were converted to grey scale prior to analysis. Code used to analyze the gels available at __%%TODO%%__.
 
 #### Homogeneity Study Results
+__%%TODO%%__ DNA fragment homogeneity results
+
 
 #### Stability Study Results
+__%%TODO%%__ DNA fragment stability results
+
+\pagebreak
 
 # Appendix
-## Section A
+
 ```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap= "Certificate of analysis provided by the reference material manufacturer."}
 # __SPECIFIC TO RM__
 grid.raster(readPNG("Lofstrand_certificate_of_analysis.png"))
 ```
 
-## Section B
 ```{r echo = FALSE, message=FALSE, warning=FALSE, fig.width=3, fig.height=3, fig.align='center', fig.cap= "RM tube label"}
 # __SPECIFIC TO RM__
 grid.raster(readPNG("RMLabel.png"))
 ```
 
-## Section C
 ```{r echo = FALSE, message=FALSE, warning=FALSE, fig.align='center', fig.cap= "Bioinformatic pipeline flowchart."}
 grid.raster(readPNG("bioinf-pipeline-flowchart.png"))
 ```
 
+\pagebreak
+
 ## Section D
-__%%TODO%%__ Gel Images
+__%%TODO%%__ Example gel analysis
+
+\pagebreak
 
 # References
 
