--- a/inst/rmarkdown/templates/pepr-roa/skeleton/micro_rm_references.bib
+++ b/inst/rmarkdown/templates/pepr-roa/skeleton/micro_rm_references.bib
@@ -110,3 +110,79 @@ url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3286951\&tool=p
 volume = {109},
 year = {2012}
 }
+
+@article{Hong2014,
+abstract = {Recent innovations in sequencing technologies have provided researchers with the ability to rapidly characterize the microbial content of an environmental or clinical sample with unprecedented resolution. These approaches are producing a wealth of information that is providing novel insights into the microbial ecology of the environment and human health. However, these sequencing-based approaches produce large and complex datasets that require efficient and sensitive computational analysis workflows. Many recent tools for analyzing metagenomic-sequencing data have emerged, however, these approaches often suffer from issues of specificity, efficiency, and typically do not include a complete metagenomic analysis framework.},
+author = {Hong, Changjin and Manimaran, Solaiappan and Shen, Ying and Perez-Rogers, Joseph F and Byrd, Allyson L and Castro-Nallar, Eduardo and Crandall, Keith A and Johnson, William Evan},
+doi = {10.1186/2049-2618-2-33},
+file = {:Users/nolson/Library/Application Support/Mendeley Desktop/Downloaded/Hong et al. - 2014 - PathoScope 2.0 a complete computational framework for strain identification in environmental or clinical sequencing.pdf:pdf},
+issn = {2049-2618},
+journal = {Microbiome},
+language = {en},
+month = sep,
+number = {1},
+pages = {33},
+publisher = {BioMed Central Ltd},
+title = {{PathoScope 2.0: a complete computational framework for strain identification in environmental or clinical sequencing samples}},
+url = {http://www.microbiomejournal.com/content/2/1/33/abstract},
+volume = {2},
+year = {2014}
+}
+
+@article{Li2009,
+abstract = {SUMMARY: The Sequence Alignment/Map (SAM) format is a generic alignment format for storing read alignments against reference sequences, supporting short and long reads (up to 128 Mbp) produced by different sequencing platforms. It is flexible in style, compact in size, efficient in random access and is the format in which alignments from the 1000 Genomes Project are released. SAMtools implements various utilities for post-processing alignments in the SAM format, such as indexing, variant caller and alignment viewer, and thus provides universal tools for processing read alignments. AVAILABILITY: http://samtools.sourceforge.net.},
+author = {Li, Heng and Handsaker, Bob and Wysoker, Alec and Fennell, Tim and Ruan, Jue and Homer, Nils and Marth, Gabor and Abecasis, Goncalo and Durbin, Richard},
+doi = {10.1093/bioinformatics/btp352},
+file = {:Users/nolson/Library/Application Support/Mendeley Desktop/Downloaded/Li et al. - 2009 - The Sequence AlignmentMap format and SAMtools.pdf:pdf},
+issn = {1367-4811},
+journal = {Bioinformatics (Oxford, England)},
+keywords = {Algorithms,Base Sequence,Computational Biology,Computational Biology: methods,Genome,Genomics,Molecular Sequence Data,Sequence Alignment,Sequence Alignment: methods,Sequence Analysis, DNA,Sequence Analysis, DNA: methods,Software},
+mendeley-groups = {CCQM References,CCQM,CCQM/CCQM-paper-references,CCQM study I manuscript},
+month = aug,
+number = {16},
+pages = {2078--9},
+pmid = {19505943},
+title = {{The Sequence Alignment/Map format and SAMtools.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2723002\&tool=pmcentrez\&rendertype=abstract},
+volume = {25},
+year = {2009}
+}
+
+@article{Koboldt2009,
+abstract = {SUMMARY: Massively parallel sequencing technologies hold incredible promise for the study of DNA sequence variation, particularly the identification of variants affecting human disease. The unprecedented throughput and relatively short read lengths of Roche/454, Illumina/Solexa, and other platforms have spurred development of a new generation of sequence alignment algorithms. Yet detection of sequence variants based on short read alignments remains challenging, and most currently available tools are limited to a single platform or aligner type. We present VarScan, an open source tool for variant detection that is compatible with several short read aligners. We demonstrate VarScan's ability to detect SNPs and indels with high sensitivity and specificity, in both Roche/454 sequencing of individuals and deep Illumina/Solexa sequencing of pooled samples.},
+author = {Koboldt, Daniel C and Chen, Ken and Wylie, Todd and Larson, David E and McLellan, Michael D and Mardis, Elaine R and Weinstock, George M and Wilson, Richard K and Ding, Li},
+doi = {10.1093/bioinformatics/btp373},
+file = {:Users/nolson/Library/Application Support/Mendeley Desktop/Downloaded/Koboldt et al. - 2009 - VarScan variant detection in massively parallel sequencing of individual and pooled samples.pdf:pdf},
+issn = {1367-4811},
+journal = {Bioinformatics (Oxford, England)},
+keywords = {Computational Biology,Computational Biology: methods,Humans,Polymorphism, Single Nucleotide,Polymorphism, Single Nucleotide: genetics,Sequence Analysis, DNA,Sequence Analysis, DNA: methods,Software},
+mendeley-groups = {qPCR,snp review},
+month = sep,
+number = {17},
+pages = {2283--5},
+pmid = {19542151},
+title = {{VarScan: variant detection in massively parallel sequencing of individual and pooled samples.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2734323\&tool=pmcentrez\&rendertype=abstract},
+volume = {25},
+year = {2009}
+}
+
+@article{Delcher2002,
+abstract = {We describe a suffix-tree algorithm that can align the entire genome sequences of eukaryotic and prokaryotic organisms with minimal use of computer time and memory. The new system, MUMmer 2, runs three times faster while using one-third as much memory as the original MUMmer system. It has been used successfully to align the entire human and mouse genomes to each other, and to align numerous smaller eukaryotic and prokaryotic genomes. A new module permits the alignment of multiple DNA sequence fragments, which has proven valuable in the comparison of incomplete genome sequences. We also describe a method to align more distantly related genomes by detecting protein sequence homology. This extension to MUMmer aligns two genomes after translating the sequence in all six reading frames, extracts all matching protein sequences and then clusters together matches. This method has been applied to both incomplete and complete genome sequences in order to detect regions of conserved synteny, in which multiple proteins from one organism are found in the same order and orientation in another. The system code is being made freely available by the authors.},
+author = {Delcher, Arthur L and Phillippy, Adam and Carlton, Jane and Salzberg, Steven L},
+file = {:Users/nolson/Library/Application Support/Mendeley Desktop/Downloaded/Delcher et al. - 2002 - Fast algorithms for large-scale genome alignment and comparison.pdf:pdf},
+issn = {1362-4962},
+journal = {Nucleic acids research},
+keywords = {Algorithms,Animals,Computational Biology,Computational Biology: methods,Computers,Contig Mapping,Genome,Genome, Bacterial,Genome, Human,Genome, Protozoan,Genomics,Genomics: methods,Humans,Plasmodium,Plasmodium: genetics,Sequence Alignment,Sequence Alignment: methods,Software,Time Factors},
+mendeley-groups = {CCQM References,CCQM,CCQM References/mapping assembly alignment,FDA pipeline},
+month = jun,
+number = {11},
+pages = {2478--83},
+pmid = {12034836},
+title = {{Fast algorithms for large-scale genome alignment and comparison.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=117189\&tool=pmcentrez\&rendertype=abstract},
+volume = {30},
+year = {2002}
+}
+
+
